--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,11 @@ jobs:
           paths: 
             - ./vendor/bundle 
 
+      # Install git submoduules
+      - run:
+          name: Install submodules
+          command: git submodule update --init --recursive
+
       - run:
           name: Build
           command: bundle exec jekyll build
